solved layout bug in project_category page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -334,3 +334,7 @@ h2{
 th{
     visibility: hidden;
 }
+
+#myTable_wrapper{
+    margin: auto
+}
